# WritingTool

./: .gitattributes  Ideas.md  README.md  Schema_example.md  more.md
writiting/api/: Cargo.toml
writiting/api/src/: lib.rs  middleware.rs
writiting/api/src/authentication/: audit_log_model.rs  password_reset_model.rs  rate_limit_model.rs  secret_rotation_model.rs  token_creation.rs  token_generation_model.rs  token_response_model.rs
writiting/api/src/authentication/models/: api_key_model.rs  audit_log_model.rs  email_verification_model.rs  feature_flag_model.rs  mod.rs  rate_limit_model.rs  secret_rotation_model.rs
writiting/api/src/db/: connection_pool.rs
writiting/api/src/features/: additional_model.rs  bookmark_model.rs  post_comment_model.rs  user_preferences_model.rs
writiting/api/src/log/: database_health_model.rs  maintenance_window_model.rs
writiting/api/src/posts/: mod.rs  post_functions.rs  post_model.rs
writiting/api/src/role/: mod.rs  role_functions.rs  role_model.rs
writiting/api/src/session/: session_functions.rs  session_model.rs
writiting/api/src/user_features/: follow_system_model.rs  notification_model.rs  reaction_model.rs  user_preferences_model.rs  user_profile_model.rs
writiting/api/src/users/: mod.rs  user_profile_functions.rs  user_profile_model.rs  users_functions.rs  users_model.rs
writiting/api/src/utils/: mod.rs  validation.rs
writiting/ui/: Cargo.toml
writiting/ui/src/: avatar.rs  avatar_drop.rs  cards.rs  echo.rs  landing_page.rs  lib.rs  modal.rs
writiting/ui/src/auth/: reset_password.rs  state.rs
wrtiting/api/: Cargo.toml
wrtiting/api/src/: lib.rs  ollama.rs
wrtiting/api/src/authentication/: auth_model.rs
wrtiting/api/src/comment/: comment_model.rs
wrtiting/api/src/db/: collection_pool.rs  connection_pool.rs  mod.rs
wrtiting/api/src/posts/: mod.rs  post_functions.rs  post_model.rs
wrtiting/api/src/role/: mod.rs
wrtiting/api/src/session/: mod.rs  session_management.rs  session_model.rs
wrtiting/api/src/users/: user_profile.rs
wrtiting/desktop/: Cargo.toml
wrtiting/desktop/assets/: tailwind.css
wrtiting/desktop/src/: main.rs
wrtiting/desktop/src/state/: mod.rs  theme.rs
wrtiting/desktop/src/views/: auth_pages.rs  blog.rs  editor.rs  footer.rs  help.rs  home.rs  layout.rs  login.rs  mod.rs  navbar.rs  not_found.rs  settings.rs  testing.rs
wrtiting/desktop/src/views/admin/: admin_dashboard.rs  admin_reports.rs  admin_settings.rs  admin_users.rs  mod.rs
wrtiting/desktop/src/views/ai/: chat.rs  mod.rs  model_selection.rs  workflows.rs
wrtiting/desktop/src/views/expense/: create_expense.rs  expense_dashboard.rs  expense_tracker.rs  mod.rs
wrtiting/desktop/src/views/help/: mod.rs
wrtiting/desktop/src/views/legal/: privacy_policy.rs  (+1 more)
(+95 files in other folders)
