[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

serde = "1.0.219"
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
reqwest = { version = "0.12.19", features = ["json"] }
tracing = "0.1.41"
tokio = { version = "1.45.1", features = ["full"] }
dotenv = "0.15"
uuid = { version = "1.17.0", features = ["serde", "v4" ] }
rand = "0.9.1"
password-hash = "0.5.0"
rand_core = "0.9.3"
argon2 = "0.5.3"
anyhow = "1.0.98"


lazy_static = "1.5.0"
regex = "1.11.1"


#sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", ] }