[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"

web-sys = { version = "0.3.77", features = ["MouseEvent"] }
tokio = { version = "1.45.1", features = ["time"] }
log = "0.4.27"
dioxus-desktop = "0.6.3"
wasm-bindgen = "0.2.100"
dioxus = { workspace = true }
api = { workspace = true }
