[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
sqlx = "0.8.6"
serde = "1.0.219"
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
reqwest = { version = "0.12.19", features = ["json"] }
tracing = "0.1.41"
