[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
serde = "1.0.219"
tokio = "1.45.1"
tracing = "0.1.41"
dotenvy = "0.15.7"
web-sys = "0.3.77"

dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
api = { workspace = true }


[features]
default = []
desktop = ["dioxus/desktop"]
server = ["dioxus/server"]
